fixed gif spacing

--- a/blender/buttons/index.html
+++ b/blender/buttons/index.html
@@ -9,17 +9,19 @@
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/blender/blender.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="/website/blender/cube.gif">
-        <title>blender/buttons</title></head>
+        <title>blender/buttons</title><style>
+            .gif{margin: 8px 8px 0 0}
+        </style></head>
 
     <body><div class="main"><h1>buttons!</h1></div>
         <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/blender">go back</a></div>
         <div class="main">
             <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p><br>
-                <p>One with cubes walking:</p><img src="walking.gif">
+                <p>One with cubes walking:</p><img src="walking.gif" class="gif">
                 <br><br>
-                <p>Two having fun with shadows and things:</p><img src="shadow.gif"><img src="what.gif">
+                <p>Two having fun with shadows and things:</p><img src="shadow.gif" class="gif"><img src="what.gif" class="gif">
                 <br><br>
-                <p>And two others with a spinning color ring:</p><img src="colorring1.gif"><img src="colorring2.gif">
+                <p>And two others with a spinning color ring:</p><img src="colorring1.gif" class="gif"><img src="colorring2.gif" class="gif">
                 <br><br> 
                 <p>Another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good.</p><img src="waves.gif">
             <p>But at least I got some nice still renders.</p><br>
