--- a/blender/index.html
+++ b/blender/index.html
@@ -21,6 +21,7 @@
 
         <ul>
             <li><h3><a href="icossymetry">icossymetry</a> (40)</h3></li>
+            <li><h3><a href="cmyk">cmyk</a> (8)</h3></li>
             <li><h3><a href="buttons">buttons</a> (7)</h3></li>
         </ul>
 
