made h3s into h2s and added blender to index!

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
             .summary a:hover::after{margin-left: 8px; font-size: 1.5rem}
 
+            .normal:hover{background-color: #f0f0f010}
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             .buttons:hover{background-color: #b8cadf; color: #001a40; border-color: #0b458e;}
             .misc:hover{background-color: #15c40510; color: #f0f0f0; border-color: #15c405;}
@@ -85,6 +86,7 @@
     <div class="summary">
 
         <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a><br>
+        <a href="blender" class="normal" title="(stuff made in blender)">blender</a><br>
         <a href="buttons" class="buttons" title="(other folks' sites)">buttons</a>
         <a href="misc" class="misc" title="(ellaneous)">misc</a>
         <a href="sitelog" class="sitelog" title="(what's changed)">sitelog</a>
