--- a/sitelog.html
+++ b/sitelog.html
@@ -33,6 +33,10 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>15/8/2023 22:06<div class="after"></div></h2>
+            <p>Added back the blenders page with icossymetry, buttons and all 8 cmyks.
+            </p> 
+        </div><div id="entry">
             <h2>14/8/2023 21:01<div class="after"></div></h2>
             <p>Added back buttons page, now with a johnvertisement again! I think i'm gonna work on favicons and buttons now.
             </p> 
