--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             .summary a:hover::after{margin-left: 8px; font-size: 1.5rem}
 
-            .normal:hover{background-color: #f0f0f010}
+            .normal:hover{background-color: #f0f0f010; border-color: #f0f0f0}
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             .buttons:hover{background-color: #b8cadf; color: #001a40; border-color: #0b458e;}
             .misc:hover{background-color: #15c40510; color: #f0f0f0; border-color: #15c405;}
