made h3 font size larger ghhh

--- a/blender/index.html
+++ b/blender/index.html
@@ -9,7 +9,9 @@
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="blender.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="cube.gif">
-        <title>stuff made in blender</title></head>
+        <title>stuff made in blender</title><style>
+            h3{font-size: 1.75rem;}
+        </style></head>
     <body><div class="main"><h1>stuff made in blender</h1></div>
     <div class="top"><a href="/website/">go back</a></div>
     <div class="main"><p>
@@ -20,9 +22,9 @@
         You can see how many images each page has next to the link, so if your internet isn't too good, maybe these won't be the fastest loading times...</p>
 
         <ul>
-            <li><h2><a href="icossymetry">icossymetry</a> (40)</h2></li>
-            <li><h2><a href="cmyk">cmyk</a> (8)</h2></li>
-            <li><h2><a href="buttons">buttons</a> (7)</h2></li>
+            <li><h3><a href="icossymetry">icossymetry</a> (40)</h3></li>
+            <li><h3><a href="cmyk">cmyk</a> (8)</h3></li>
+            <li><h3><a href="buttons">buttons</a> (7)</h3></li>
         </ul>
 
         <img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 0; max-width: 100%; width: auto"> </div></body>
