--- a/blender/index.html
+++ b/blender/index.html
@@ -10,7 +10,7 @@
         <link href="blender.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="cube.gif">
         <title>stuff made in blender</title><style>
-            h3{font-size: 1.75rem;}
+            h3{font-size: 1.5rem; margin: 16px 0}
         </style></head>
     <body><div class="main"><h1>stuff made in blender</h1></div>
     <div class="top"><a href="/website/">go back</a></div>
