--- a/sitelog.html
+++ b/sitelog.html
@@ -21,7 +21,7 @@
             flex: 1; margin-left: 8px; height: 1px} 
         </style></head>
     <body><div class="main"><h1>sitelog</h1></div>
-    <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/">go back</a></div>
+    <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
     <div class="main">
 
         <details style="margin-top: 12px"><summary>More about the site</summary><p> 
