--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@ under construction
 <span style="color: hsl(0, 0%, 100%, calc(3 / 18))">ion</span> <span style="color: hsl(0, 0%, 100%, calc(15 / 18))">under construct
 <span style="color: hsl(0, 0%, 100%, calc(2 / 18))">on</span> <span style="color: hsl(0, 0%, 100%, calc(16 / 18))">under constructi
 <span style="color: hsl(0, 0%, 100%, calc(1 / 18))">n</span> <span style="color: hsl(0, 0%, 100%, calc(17 / 18))">under constructio
- <a href="/website/">under construction</a>
+ <a href="/">under construction</a>
 </pre>
 <pre>this page doesn't exist
 ...how did you get here
