--- a/blender/buttons/index.html
+++ b/blender/buttons/index.html
@@ -14,7 +14,7 @@
         </style></head>
 
     <body><div class="main"><h1>buttons!</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/blender">go back</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
         <div class="main">
             <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p><br>
                 <p>One with cubes walking:</p><img src="walking.gif" class="gif">
