--- a/buttons/index.html
+++ b/buttons/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="./style.css" rel="stylesheet" type="text/css" media="all">
         <title>buttons</title><style>
         body {--back: #b8cadf;
             --text: #001a40;
@@ -29,7 +29,7 @@
             flex: 1; margin-left: 8px; height: 1px} 
         </style></head>
     <body><div class="main"><h1>buttons!</h1></div>
-    <div class="top"><a href="/website/">go back</a></div>
+    <div class="top"><a href="../">go back</a></div>
     <div class="main">
         <p>This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found on status.cafe!
         <br>And a button of our own is coming soon to fit the new new new [...] style</p>
