--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -6,8 +6,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
-        <link href="/website/misc/misc.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../misc.css" rel="stylesheet" type="text/css" media="all">
         <title>> folder</title><style>
 
             details:hover, details[open], details[open] > summary{border-color: var(--color)}
@@ -17,7 +17,7 @@
 
         </style></head>
     <body><div class="main"><h1>folder</h1></div>
-    <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/misc">back to misc</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
     <div class="main">
     <p>
         You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts and the ones that do have an asterisk (*) after them.
