--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -61,7 +61,7 @@
             <div class="sp"><b class="s">soweli</b> li <b class="v">musi</b></div>
             <div class="m">animal is fun/playing</div>
         </div><p>
-            If the <b class="s">subject</b> is <b>mi or sina</b>, however, the particle is dropped:</p>
+            If the subject is <b class="s">mi or sina</b>, however, the particle is dropped:</p>
         <div class="p">
         <div class="la" style="color: var(--text)">
             <b class="s">sina</b> <b class="v">kute</b> e <b class="o">mi</b></div>
@@ -83,15 +83,15 @@
         </div>
         <div class="p">
             <div class="la" style="color: var(--text)">
-                <b class="s">mi</b> o <b class="v">moku</b> e <b class="o">kili</b></div>
-            <div class="sp"><b class="s">mi</b> o <b class="v">moku</b> e <b class="o">kili</b></div>
-            <div class="m">I should eat fruit</div>
-        </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
                 <b class="s">jan Atu</b> o</div>
             <div class="sp"><b class="s">jan [a tu]</b> o</div>
             <div class="m">(Hey) Arthur!</div>
+        </div><p>If the subject is <b class="s">sina</b>, it can be dropped:</p>
+        <div class="p">
+            <div class="la" style="color: var(--text)">
+                o <b class="v">moku</b> e <b class="o">kili</b></div>
+            <div class="sp">o <b class="v">moku</b> e <b class="o">kili</b></div>
+            <div class="m">(you) eat fruit!</div>
         </div><p>
             If you want to have multiple <b class="s">subjects</b>, <b class="v">predicates</b> or 
             <b class="o">objects</b>, you must <b>repeat the particle that indicates it</b>.
