--- a/misc/journal.html
+++ b/misc/journal.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="misc.css" rel="stylesheet" type="text/css" media="all">
         <title>> journal</title><style>
 
@@ -16,7 +16,7 @@
 
         </style></head>
     <body><div class="main"><h1>journal</h1></div>
-    <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/misc">back to misc</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
     <div class="main">
 
 
