--- a/blender/cmyk/index.html
+++ b/blender/cmyk/index.html
@@ -14,7 +14,7 @@
         </style></head>
 
     <body><div class="main"><h1>cmyk</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/blender">go back</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
         <div class="main">
             <p>A bunch of renders that i wanted to make bc i love the aesthetic of CMYK!</p><br>
         <div class="image"><img src="cmyk1.png">
