--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -12,7 +12,7 @@
         <title>blender/icossymetry</title></head>
 
     <body><div class="main"><h1>icossymetry</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/blender">go back</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
         <div class="main">
         <p>This whole thing started when i wanted to recreate the floor pattern in this iconic maths video, 
         <a href="https://www.youtube.com/watch?v=4aN6vX7qXPQ">Not Knot</a> by the Geometry Center.
