--- a/blender/index.html
+++ b/blender/index.html
@@ -6,14 +6,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="blender.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="cube.gif">
         <title>stuff made in blender</title><style>
             h3{font-size: 1.5rem; margin: 16px 0}
         </style></head>
     <body><div class="main"><h1>stuff made in blender</h1></div>
-    <div class="top"><a href="/website/">go back</a></div>
+    <div class="top"><a href="./">go back</a></div>
     <div class="main"><p>
         Hi! These are (most) of the things i've done in blender over the last while.<br>
         The original files are 1920x1080 (bigger even than my own display lol), so they're 400x225 to save your precious bandwidth at least a little bit.<br>
