--- a/bookmarks.html
+++ b/bookmarks.html
@@ -17,7 +17,7 @@
 
     <body><div class="main">
         <h1>a lot of bookmarks</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/">go back</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
     <div class="main">
         <p>These are a bunch of bookmarks i've collected with raindrop.io, automatically updating! (<s>if i remember to add to them arrghh</s>)<br>
         </p>
