--- a/misc/index.html
+++ b/misc/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="misc.css" rel="stylesheet" type="text/css" media="all">
         <title>> misc</title><style>
             .journal, .notes, .folder, .exit{padding-left: 20px}
@@ -27,7 +27,7 @@
     <div class="journal">> <a href="journal">open the notebook</a></div>
     <div class="folder">> <a href="folder">open the folder</a></div>
     <div class="notes">> <a href="wall">look at the wall</a></div>
-    <div class="exit">> <a href="/website/">walk out the door</a></div>
+    <div class="exit">> <a href="../">walk out the door</a></div>
     <div class="indicator"></div>
     </div></body>
 </html>
