--- a/buttons/index.html
+++ b/buttons/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="./style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>buttons</title><style>
         body {--back: #b8cadf;
             --text: #001a40;
