--- a/misc/journal.html
+++ b/misc/journal.html
@@ -16,7 +16,7 @@
 
         </style></head>
     <body><div class="main"><h1>journal</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
     <div class="main">
 
 
