--- a/misc/wall.html
+++ b/misc/wall.html
@@ -28,7 +28,7 @@
 
         </style></head>
     <body><div class="main"><h1>wall</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
+        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
     <div class="main">
         <p>You look closer at the sticky notes on the wall.
         </p>
